--- a/neural_network.ipynb
+++ b/neural_network.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# PyTorch\n",
     "\n",
-    "Creating a simple neural network using PyTorch. The network will take two-dimensional input data and classify it into one of four classes. We'll start by generating a synthetic dataset, then build and train our model, and finally evaluate its performance."
+    "Creating a neural network using PyTorch. The network will take two-dimensional input data and classify it into one of four classes. We'll start by generating a synthetic dataset, then build and train our model, and finally evaluate its performance."
    ]
   },
   {
